--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Ppassa</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
+  <script src="http://platform.twitter.com/anywhere.js?id=2oOyIUmwXK7zfPMmVVqryg&v=1" type="text/javascript"></script>
   <%= csrf_meta_tag %>
 </head>
 <body>
